styles.css
body {
  margin: 25px;
  background-color: #000000;
  color: #ffffff; 
  font-family: arial, sans-serif;
  font-size: 14px;
}

h1 {
  font-size: 35px;
  font-weight: normal;
  margin-top: 5px;
}
h2 {
    font-size: 20;
    font-weight: normal;
    margin-top: 5px;
}

p1 {
  background-color: #000000;
  color: #ffffff; 
}

.someclass { color: red; }

#someid { color: green; }

